--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tree-sitter-decaf",
   "version": "1.0.0",
   "description": "A tree-sitter grammar parser for the educational Decaf language",
-  "main": "index.js",
+  "main": "bindings/node",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
